# TiCalcul

./: .gitignore  CMakeLists.txt  Doxyfile  Main.qml  Q_deploiement.bat  Q_deploiement_MSVC.bat  Q_deploiement_minGW.bat  Q_documentation.bat  README.md  TiCalcul.qhp  doxygen.bat  main.cpp  tiCalcul.qch  tiCalcul.qdocconf
Qml/: Main.qml  tiCalcul.qdoc
Qml/Components/: ActiveDisplay.qml  Bloc.qml  CalculFrame.qml  ConvertFrame.qml  FieldInput.qml  FieldLabel.qml  FieldResult.qml  Keyboard.qml  LeftFrame.qml  RightFrame.qml
Qml/Controllers/: AboutPopup.qml  CalculFrame.qml  FieldInput.qml  Keyboard.qml  LeftFrame.qml  MiddleBar.qml  PhysicalKeyboard.qml  RightFrame.qml  TiButton.qml  TiButton.txt  TopBar.qml
Qml/Vues/: CalculFrameForm.ui.qml  FieldInputForm.ui.qml  KeyboardForm.ui.qml  KeyboardKeyForm.ui.qml  LeftFrameForm.ui.qml  MiddleBarForm.ui.qml  RightFrameForm.ui.qml  SquareButton.qml  SquareButton.ui.qml  TiButton.ui.qml  TiButtonForm.ui.qml  TopBarForm.ui.qml
Resources/: TiCalcul.qrc  appicon.rc
Sources/: afficheur.cpp  afficheur.h  afficheur.qdoc  calculateur.cpp  calculateur.h  converter.cpp  converter.h  main.cpp  operande.cpp  operande.h  unites.cpp  unites.h
docs/: .$TiCalcul-QML-hierarchy.drawio.bkp  CNAME  TiCalcul-QML-hierarchy.drawio  TiCalcul-QML-hierarchy.drawio.html  _config.yml  compilation.md  doxygen.lnk  index.md  tiCalcul.qdocconf
docs/doxygen/html/: afficheur_8h_source.html  annotated.html  annotated_dup.js  calculateur_8h_source.html  class_afficheur-members.html  class_afficheur.html  class_afficheur.js  class_calculateur-members.html  class_calculateur.html  class_calculateur.js  class_classe.html  class_converter-members.html  class_converter.html  class_converter.js  class_enum_xC3_xA9r_xC3_xA9s.html  class_operande-members.html  class_operande.html  class_operande.js  class_unites-members.html  class_unites.html  class_unites.js  classes.html  converter_8h_source.html  dir_121ec849a4d9f4e03dea51c06a3535e3.html  dir_121ec849a4d9f4e03dea51c06a3535e3.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_5f324c9d1717e402c6216249576b9a8d.html  dir_90b1b77df3c3c2d56d0c8d83d1548ee4.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_937900b87e0c7a5fa01190c395fb83f7.js  dir_9f1381973491374bd604fd33c05d0c23.html  dir_9f1381973491374bd604fd33c05d0c23.js  dir_a48f317256f365477399c946f99b1ffd.html  dir_a48f317256f365477399c946f99b1ffd.js  dir_b19deb720167aeb2fa466512fa3876c9.html  dir_b19deb720167aeb2fa466512fa3876c9.js  dir_b53562177cadfec814dcc49f7bf01928.html  dir_b53562177cadfec814dcc49f7bf01928.js  (+29 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js
docs/doxygen/latex/: afficheur_8h_source.tex  annotated.tex  calculateur_8h_source.tex  class_afficheur.eps  class_afficheur.tex  class_calculateur.eps  class_calculateur.tex  class_classe.tex  class_converter.tex  class_enum_xC3_xA9r_xC3_xA9s.tex  class_operande.eps  class_operande.tex  class_unites.tex  converter_8h_source.tex  files.tex  foo_8h_source.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  md_docs_2compilation.tex  md_readme.tex  moc__afficheur_8cpp_source.tex  moc__operande_8cpp_source.tex  operande_8h_source.tex  refman.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_a3fcf2da82f2aa48cec52e7383c9d4fc2.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___c_l_a8f12dae49576aa997fa90a8c11b9868c.tex  todo.tex  unites_8h_source.tex
docs/images/: TiCalcul-QML-hierarchy.drawio
docs/qdoc/html/: TiCalcul.qhp  TiCalcul.qhp.sha1  afficheur-members.html  afficheur.html  calculateur-members.html  calculateur.html  converter-members.html  converter.html  operande-h.html  operande-members.html  operande.html  qml-aboutpopup-members.html  qml-aboutpopup.html  qml-activedisplay-members.html  qml-activedisplay.html  qml-bloc-members.html  qml-bloc.html  qml-fieldlabel-members.html  qml-fieldlabel.html  qml-fieldresult-members.html  qml-fieldresult.html  qml-leftframe-members.html  qml-leftframe.html  qml-leftframeform-members.html  qml-leftframeform.html  qml-main-members.html  qml-main.html  qml-qticalcul-aboutpopup-members.html  qml-qticalcul-aboutpopup.html  qml-qticalcul-activedisplay-members.html  qml-qticalcul-activedisplay.html  qml-qticalcul-bloc-members.html  qml-qticalcul-bloc.html  qml-qticalcul-calculframe-members.html  qml-qticalcul-calculframe.html  qml-qticalcul-calculframeform-members.html  qml-qticalcul-calculframeform.html  qml-qticalcul-fieldinput-members.html  qml-qticalcul-fieldinput.html  qml-qticalcul-fieldinputform-members.html  (+44 more)
installeur/: Q_packageSetup.bat  generateSetup.bat  symboles.txt
installeur/config/: config.xml
